Added CMS backend

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby-plugin-lodash": "^3.0.2",
     "gatsby-plugin-manifest": "^2.0.7",
     "gatsby-plugin-netlify": "^2.0.3",
+    "gatsby-plugin-netlify-cms": "^3.0.9",
     "gatsby-plugin-offline": "^2.0.11",
     "gatsby-plugin-react-helmet": "^3.0.1",
     "gatsby-plugin-sitemap": "^2.0.2",
@@ -21,6 +22,7 @@
     "gatsby-source-filesystem": "^2.0.7",
     "gatsby-transformer-remark": "^2.1.11",
     "lodash": "^4.17.11",
+    "netlify-cms": "^2.3.3",
     "polished": "^2.3.0",
     "prismjs": "^1.15.0",
     "prop-types": "^15.6.2",
