--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,21 +1,17 @@
 backend:
   name: github
   repo: stagfoo/exodevhub-website
-  branch: master
 
 media_folder: static/assets
 public_folder: assets
 
 collections:
-  - name: "blog"
-    label: "Blog"
-    folder: "blog"
+  - name: blog
+    label: Blog
+    folder: blog
     create: true
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     fields:
-      - {label: "Template Key", name: "templateKey", widget: "hidden", default: "blog-post"}
-      - {label: "Title", name: "title", widget: "string"}
-      - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Description", name: "description", widget: "text"}
-      - {label: "Body", name: "body", widget: "markdown"}
-      - {label: "Tags", name: "tags", widget: "list"}
+      - { name: date, label: Date, widget: date }
+      - { name: title, label: Title }
+      - { name: category, label: Category }
+      - { name: body, label: Body, widget: markdown }
