--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "LekoArts <hello@lekoarts.de>",
   "dependencies": {
     "babel-plugin-styled-components": "^1.8.0",
+    "design-system-utils": "^1.2.0",
     "gatsby": "^2.0.37",
     "gatsby-plugin-catch-links": "^2.0.6",
     "gatsby-plugin-lodash": "^3.0.2",
