Disabled Splash; added new colors, re-did grid

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -15,6 +15,7 @@ collections:
       - { name: img, label: Image, widget: image}
       - { name: title, label: Title }
       - { name: category, label: Category }
+      - { name: shape, label: Shape }
       - { name: body, label: Body, widget: markdown }
       - { name: author, label: Author, widget: markdown }
   - name: people
