--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-styled-components": "^3.0.1",
     "gatsby-plugin-typography": "^2.2.1",
     "gatsby-remark-autolink-headers": "^2.0.9",
+    "gatsby-remark-emojis": "^0.2.3",
     "gatsby-remark-external-links": "0.0.4",
     "gatsby-remark-prismjs": "^3.0.3",
     "gatsby-source-filesystem": "^2.0.7",
