--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-react-helmet": "^3.0.1",
     "gatsby-plugin-sitemap": "^2.0.2",
     "gatsby-plugin-styled-components": "^3.0.1",
+    "gatsby-plugin-typescript": "^2.0.3",
     "gatsby-plugin-typography": "^2.2.1",
     "gatsby-remark-autolink-headers": "^2.0.9",
     "gatsby-remark-emojis": "^0.2.3",
