Update files to typescript

--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "version": "2.0.0",
   "author": "LekoArts <hello@lekoarts.de>",
   "dependencies": {
+    "@types/lodash": "^4.14.120",
+    "@types/react": "^16.7.21",
+    "@types/react-dom": "^16.0.11",
+    "@types/react-helmet": "^5.0.8",
+    "@types/styled-components": "^4.1.6",
     "babel-plugin-styled-components": "^1.8.0",
     "design-system-utils": "^1.2.0",
     "gatsby": "^2.0.37",
@@ -28,7 +33,6 @@
     "netlify-cms": "^2.3.3",
     "polished": "^2.3.0",
     "prismjs": "^1.15.0",
-    "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-helmet": "^5.2.0",
