--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -23,7 +23,7 @@ collections:
     create: true
     fields:
       - { name: img, label: Image, widget: image }
-      - { name: name, label: Name }
+      - { name: title, label: Name }
       - { name: position, label: Position }
       - { name: bio, label: Bio }
       - { name: twitter, label: Twitter }
