--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -29,3 +29,10 @@ collections:
               'Adam Muñoz',
             ],
         }
+
+- name: people
+  label: People
+  create: true
+  fields:
+    - { name: Full Name, label: fullName }
+    - { name: type, label: type, default:"post" }
