--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -13,10 +13,20 @@ collections:
     fields:
       - { name: date, label: Date, widget: datetime }
       - { name: title, label: Title }
-      - { name: category, label: Category }
-      - { name: shape, label: Shape }
-      - { name: body, label: Body, widget: markdown }
       - { name: banner, label: social-banner, widget: image }
+      - { name: category, label: Category }
+       - { name: shape,
+        label: Shape,
+        widget: select,
+        options:
+          [
+            'square',
+            'corner',
+            'diamond',
+            'circle',
+          ],
+      }
+      - { name: body, label: Body, widget: markdown }
       - { name: author,
         label: Author,
         widget: select,
