setup custom social banner

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -13,7 +13,7 @@ collections:
     fields:
       - { name: date, label: Date, widget: datetime }
       - { name: title, label: Title }
-      - { name: banner, label: social-banner, widget: image }
+      - { name: banner, label: banner, widget: image }
       - { name: category, label: Category }
        - { name: shape,
         label: Shape,
