--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "version": "2.0.0",
   "author": "LekoArts <hello@lekoarts.de>",
   "dependencies": {
+    "@ant-design/icons": "^1.1.16",
+    "@ant-design/icons-react": "^1.1.2",
     "@types/lodash": "^4.14.120",
     "@types/react": "^16.7.21",
     "@types/react-dom": "^16.0.11",
