--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/styled-components": "^4.1.6",
     "babel-plugin-styled-components": "^1.8.0",
     "design-system-utils": "^1.2.0",
+    "fetch": "^1.1.0",
     "gatsby": "^2.0.37",
     "gatsby-plugin-catch-links": "^2.0.6",
     "gatsby-plugin-lodash": "^3.0.2",
