--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -14,6 +14,7 @@ collections:
       - { name: date, label: Date, widget: datetime }
       - { name: title, label: Title }
       - { name: banner, label: banner, widget: image }
+      - { name: medium, label: Medium URL }
       - { name: type, label: type, default:"post" }
       - { name: category, label: Category }
       - { name: shape,
