--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -30,6 +30,7 @@ collections:
           ],
       }
       - { name: body, label: Body, widget: markdown }
+      - { name: authorLink, label: Author Person, widget: relation, collection: people, displayFields: fullname, valueField:fullName   }
       - {
           name: author,
           label: Author,
