tidy up articles

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@ant-design/icons": "^1.1.16",
     "@ant-design/icons-react": "^1.1.2",
+    "@raae/gatsby-remark-oembed": "0.0.4",
     "@types/lodash": "^4.14.120",
     "@types/react": "^16.7.21",
     "@types/react-dom": "^16.0.11",
@@ -31,9 +32,10 @@
     "gatsby-remark-autolink-headers": "^2.0.9",
     "gatsby-remark-emojis": "^0.2.3",
     "gatsby-remark-external-links": "0.0.4",
+    "gatsby-remark-mathjax": "^1.0.0",
     "gatsby-remark-prismjs": "^3.0.3",
     "gatsby-source-filesystem": "^2.0.7",
-    "gatsby-transformer-remark": "^2.1.11",
+    "gatsby-transformer-remark": "^2.2.5",
     "lodash": "^4.17.11",
     "netlify-cms": "^2.3.3",
     "polished": "^2.3.0",
