Moved it to component

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -16,7 +16,7 @@ collections:
       - { name: banner, label: banner, widget: image }
       - { name: medium, label: Medium URL }
       - { name: type, widget: "hidden", label: type, default:"post" }
-
+      - { name: language, label: Language, default:"en" }
       - { name: category, label: Category }
       - { name: shape,
         label: Shape,
@@ -30,7 +30,7 @@ collections:
           ],
       }
       - { name: body, label: Body, widget: markdown }
-      - { name: authorLink, label: Author Person, widget: relation, collection: people, displayFields: fullname, valueField:fullName   }
+      - { name: authorLink, label: Author Person, widget: relation, collection: people, displayFields: fullname, valueField:twitter   }
       - {
           name: author,
           label: Author,
