--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -17,6 +17,12 @@ collections:
       - { name: medium, label: Medium URL }
       - { name: type, widget: "hidden", label: type, default:"post" }
       - { name: language, label: Language, default:"en" }
+      - label: "Languages"
+        name: "languages"
+        widget: "object"
+        fields:
+          - {label: "English Slug", name: "en", widget: "string"}
+          - {label: "Japanese Slug", name: "en", widget: "string"}
       - { name: category, label: Category }
       - { name: shape,
         label: Shape,
