--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gatsby-plugin-typescript": "^2.0.3",
     "gatsby-plugin-typography": "^2.2.1",
     "gatsby-remark-autolink-headers": "^2.0.9",
+    "gatsby-remark-embed-runkit": "github:stagfoo/gatsby-remark-embed-runkit",
     "gatsby-remark-emojis": "^0.2.3",
     "gatsby-remark-external-links": "0.0.4",
     "gatsby-remark-mathjax": "^1.0.0",
