--- a/now.json
+++ b/now.json
@@ -1,7 +1,7 @@
 {
   "name": "exodevhub-website",
   "alias": [
-    "exodevhub.now.sh"
+    "exodev.now.sh"
   ],
   "github": {
     "enabled": true,
