New homepage and rebranding

--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "dependencies": {
     "@ant-design/icons": "^1.1.16",
     "@ant-design/icons-react": "^1.1.2",
+    "@material-ui/core": "^3.9.2",
     "@raae/gatsby-remark-oembed": "0.0.4",
     "@types/lodash": "^4.14.120",
     "@types/react": "^16.7.21",
     "@types/react-dom": "^16.0.11",
     "@types/react-helmet": "^5.0.8",
     "@types/styled-components": "^4.1.6",
+    "animejs": "^3.0.1",
     "babel-plugin-styled-components": "^1.8.0",
     "design-system-utils": "^1.2.0",
     "fetch": "^1.1.0",
@@ -39,6 +41,7 @@
     "gatsby-transformer-remark": "^2.2.5",
     "katex": "^0.10.0",
     "lodash": "^4.17.11",
+    "material-ui": "^0.20.2",
     "netlify-cms": "^2.3.3",
     "polished": "^2.3.0",
     "prismjs": "^1.15.0",
