--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-google-tagmanager": "^2.0.9",
     "gatsby-plugin-lodash": "^3.0.2",
     "gatsby-plugin-manifest": "^2.0.17",
+    "gatsby-plugin-material-ui": "^1.2.4",
     "gatsby-plugin-netlify": "^2.0.3",
     "gatsby-plugin-netlify-cms": "^3.0.17",
     "gatsby-plugin-react-helmet": "^3.0.1",
