--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-catch-links": "^2.0.6",
     "gatsby-plugin-google-analytics": "^2.0.13",
     "gatsby-plugin-google-tagmanager": "^2.0.9",
+    "gatsby-plugin-intl": "^0.1.0",
     "gatsby-plugin-lodash": "^3.0.2",
     "gatsby-plugin-manifest": "^2.0.17",
     "gatsby-plugin-material-ui": "^1.2.4",
