Replace all content strings with formatted messages

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "now-build": "gatsby build",
     "dev": "gatsby develop -o",
     "serve": "gatsby build && gatsby serve",
+    "clear-cache": "rm -rf .cache",
     "lint": "yarn run lint:md && yarn run lint:js:fix",
     "lint:js": "eslint . --ext .js,.jsx --ignore-path .gitignore",
     "lint:js:fix": "eslint . --ext .js,.jsx --fix --ignore-path .gitignore",
