Added slider and 2 products

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-dom": "^16.8.0",
     "react-helmet": "^5.2.0",
     "react-progressive-image": "^0.6.0",
+    "react-slick": "^0.24.0",
     "react-typography": "^0.16.13",
     "styled-components": "^4.0.3",
     "typography": "^0.16.17"
